removed horizontal scroll issue with animations on home and about-me

--- a/styles.css
+++ b/styles.css
@@ -164,11 +164,11 @@ li {
 }
 
 .left-entry {
-  transform: translateX(-30%);
+  transform: translateX(-20%);
 }
 
 .right-entry {
-  transform: translateX(30%);
+  transform: translateX(20%);
 }
 
 .bottom-entry {
@@ -176,11 +176,11 @@ li {
 }
 
 .skills-entry {
-  transform: translateX(100%);
+  transform: translateX(50%);
 }
 
 .about-me-entry {
-  transform: translateX(-100%);
+  transform: translateX(-50%);
 }
 
 #button-container {
@@ -526,7 +526,7 @@ button {
   align-items: center;
   width: 100%;
   justify-content: space-between;
-  height: 100vh;
+  min-height: 100vh - var(--header-height);
 }
 
 #contact-me-container {
